--- a/haskell-learn.cabal
+++ b/haskell-learn.cabal
@@ -67,10 +67,18 @@ executable haskell-learn
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    
+        base ^>=4.18.3.0,
+        aeson,
+        text,
+        bytestring
 
     -- Directories containing source files.
-    hs-source-dirs:   app
+    hs-source-dirs:   app, src
 
     -- Base language which the package is written in.
     default-language: Haskell2010
+
+    other-modules:
+        Transformer,
+        Types
