--- a/haskell-learn.cabal
+++ b/haskell-learn.cabal
@@ -71,7 +71,8 @@ executable haskell-learn
         base ^>=4.18.3.0,
         aeson,
         text,
-        bytestring
+        bytestring,
+        optparse-applicative
 
     -- Directories containing source files.
     hs-source-dirs:   app, src
@@ -81,4 +82,5 @@ executable haskell-learn
 
     other-modules:
         Transformer,
-        Types
+        Types,
+        Options
