--- a/packages/json-formatter/json-formatter.cabal
+++ b/packages/json-formatter/json-formatter.cabal
@@ -11,7 +11,7 @@ cabal-version:      3.0
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:               haskell-learn
+name:               json-formatter
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
