Update: json-formatter

--- a/packages/json-formatter/json-formatter.cabal
+++ b/packages/json-formatter/json-formatter.cabal
@@ -53,7 +53,7 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
-executable haskell-learn
+executable json-formatter
     -- Import common warning flags.
     import:           warnings
 
