--- a/packages/todo-app/todo-app.cabal
+++ b/packages/todo-app/todo-app.cabal
@@ -67,7 +67,7 @@ executable todo-app
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    mtl ^>=2.3.1, base ^>=4.18.3.0, transformers
 
     -- Directories containing source files.
     hs-source-dirs:   app, src
